Update _config.yml and about.md

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Master of Science in Pharmacy/ Site Title"
+title                    : "Tieu Long Phan/ Blog"
 title_separator          : "-"
 name                     : &name "Tieu Long Phan"
 description              : &description "personal description"
