--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,11 +12,11 @@ main:
   - title: "CADD packages"
     url: /portfolio/
         
-  - #title: "Blog Posts"
+   #title: "Blog Posts"
     #url: /year-archive/
     
   - title: "CV"
     url: /cv/
     
-  - #title: "Guide"
+   #title: "Guide"
     #url: /markdown/
