--- a/_config.yml
+++ b/_config.yml
@@ -236,6 +236,15 @@ defaults:
       author_profile: true
       share: true
       comment: true
+  # _project
+  - scope:
+      path: ""
+      type: project
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
   # _talks
   - scope:
       path: ""
