--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/tieu-long-phan-b225331a5/"
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-3532-2064"
   pinterest        :
   soundcloud       :
