--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "The-Chuong TRINH"
 title_separator          : "-"
 name                     : &name "The-Chuong TRINH"
 description              : &description "personal description"
-url                      : https://thechuongtrinh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://trinhthechuong.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "thechuongtrinh/thechuongtrinh.github.io"
+repository               : "trinhthechuong/trinhthechuong.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
