--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,6 @@ author:
   email            : "thechuong123@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
-  linkedIn         : "https://www.linkedin.com/in/the-chuong-trinh-712945205/"
   codepen          :
   dribbble         :
   flickr           :
@@ -102,6 +101,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
+  linkedin         : "https://www.linkedin.com/in/the-chuong-trinh-712945205/"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
