--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "The-Chuong TRINH"
   avatar           : "Avatar.jpeg"
   bio              : "A Master's student pursuing a degree in BioHealth Engineering and Pharmacy, with a strong passion for Computer-Aided Drug Discovery, Cheminformatics, and Bioinformatics, and expertise in Machine Learning/Deep Learning methodologies."
-  location         : "Ho Chi Minh city"
+  location         : "Grenoble, France"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
