update cv and  name

--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "The-Chuong TRINH"
+title                    : "The-Chuong Trinh"
 title_separator          : "-"
-name                     : &name "The-Chuong TRINH"
+name                     : &name "The-Chuong Trinh"
 description              : &description "personal description"
 url                      : https://trinhthechuong.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
