--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "The-Chuong TRINH"
+  name             : "The-Chuong Trinh"
   avatar           : "Avatar.jpeg"
   bio              : "A Master's student pursuing a degree in BioHealth Engineering and Pharmacy, with a strong passion for Computer-Aided Drug Discovery, Cheminformatics, and Bioinformatics, and expertise in Machine Learning/Deep Learning methodologies."
   location         : "Grenoble, France"
