Update config and avatar

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "The-Chuong Trinh"
   avatar           : "Avatar.jpeg"
-  bio              : "A Master's student pursuing a degree in BioHealth Engineering and Pharmacy, with a strong passion for Computer-Aided Drug Discovery, Cheminformatics, and Bioinformatics, and expertise in Machine Learning/Deep Learning methodologies."
+  bio              : "Pharmacist and Master's degree holder in BioHealth Engineering with expertise in applying Machine Learning/Deep Learning methodologies to Computer-Aided Drug Discovery, Cheminformatics, and Bioinformatics."
   location         : "Grenoble, France"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
