--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/the-chuong-trinh-712945205/"
+  orcid            : "https://orcid.org/0000-0002-8693-030X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
